fix: logo not showing correctly

--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -42,7 +42,7 @@ html {
                     #logo {
                         width: 4rem;
                         aspect-ratio: 1;
-                        background-image: url(/frontend/src/images/white_logo_transparent_background.png);
+                        background-image: url("../images/white_logo_transparent_background.png");
                         background-size: contain;
                         border-radius: 50%;
                         backdrop-filter: invert(1);
